# calculator

qrapp/: Cargo.toml
qrapp/src/: main.rs
